# devgpt-cli

./: .gitignore  Cargo.toml  README.md  config.toml  tags
src/: ai.rs  config.rs  ctags.rs  macros.rs  main.rs  tiktoken.rs
src/ai/: finder.md  search.rs
