[package]
name = "devgpt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
serde_derive = "1.0.189"
serde = "1.0.189"
once_cell = "1.18.0"
toml = "0.8.2"
dotenv = "0.15.0"
anyhow = "1.0.75"
serde_json = "1.0.107"
openai-utils = "0.5.1"
openai-macros = "0.2.0"
env_logger = "0.10.0"
log = "0.4.20"
tiktoken-rs = "0.5.6"
itertools = "0.12.0"
indicatif = "0.17.7"
tokio-stream = "0.1.14"
futures-util = "0.3.29"
schemars = "0.8.16"
lazy_static = { version = "1.4.0", features = [] }
